added voting system w/o js

--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         <div id='board'>
             <div class='msg'>
                 <div class='voting'>
-                <button class='voteUp'>+</button>
-                <button class='voteNum'>5</button>
-                <button class='voteDown'>-</button>
+                <button class='voteBtn voteUp'>+</button>
+                <div class='voteBtn voteNum'>0</div>
+                <button class='voteBtn voteDown'>-</button>
                 </div>
             <div class='msgContent'>
                 <span class='name'>Mark Webber</span> reacted to your recent post <a class='msgLink' href='#'>jakis link</a></br><span class='timeAgo'>1min ago</span><div class='msgText'></div></div>
             </div>
             <div class='msg'>
                 <div class='voting'>
-                <button class='voteUp'>+</button>
-                <button class='voteNum'>5</button>
-                <button class='voteDown'>-</button>
+                <button class='voteBtn voteUp'>+</button>
+                <div class='voteBtn voteNum'>0</div>
+                <button class='voteBtn voteDown'>-</button>
                 </div>
             <div class='msgContent'>
                 <span class='name'>Mark Webber</span> reacted to your recent post <a class='msgLink' href='#'>jakis link</a></br><span class='timeAgo'>1min ago</span><div class='msgText'></div></div>
