--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button class='voteBtn voteDown'>-</button>
                 </div>
             <div class='msgContent'>
-                <span class='name'>Mark Webber</span> reacted to your recent post <a class='msgLink' href='#'>jakis link</a></br><span class='timeAgo'>1min ago</span><div class='msgText'></div></div>
+                <span class='name'>Mark Webber</span> reacted to your recent post <a class='msgLink' href='#'>... read message</a></br><span class='timeAgo'>1min ago</span><div class='msgText'></div></div>
             </div>
             <div class='msg'>
                 <div class='voting'>
@@ -33,7 +33,7 @@
                 <button class='voteBtn voteDown'>-</button>
                 </div>
             <div class='msgContent'>
-                <span class='name'>Mark Webber</span> reacted to your recent post <a class='msgLink' href='#'>jakis link</a></br><span class='timeAgo'>1min ago</span><div class='msgText'></div></div>
+                <span class='name'>Mark Webber</span> reacted to your recent post <a class='msgLink' href='#'>... read message</a></br><span class='timeAgo'>1min ago</span><div class='msgText'></div></div>
             </div>
 
 
